# repetitions

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Main.hs  Procfile  Repetitions.hs  makefile  repetitions.cabal
Repetitions/: Core.hs  Frontend.hs
app/: Main.hs
docker/: Build  Init
tests/: Test.hs
