name:                repetitions
version:             0.3.0
license:             MIT
license-file:        LICENSE
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
category:            Text
build-type:          Simple
cabal-version:       >=1.20

executable repetitions
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -fwarn-unused-imports -O
  build-depends:     base >=4.8 && <4.9,
                     text >=1.2 && <1.3,
                     edit-distance >=0.2 && <0.3,
                     scotty >=0.10 && <0.11,
                     blaze-html >=0.8.1 && <0.9,
                     wai-extra >=3.0
