name:                repetitions
version:             0.5.2
license:             MIT
license-file:        LICENSE
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
category:            Tools, Text
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:    Repetitions.Core, Repetitions.Frontend
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -fwarn-unused-imports -O
  build-depends:      base >=4.8 && <4.9,
                      text >=1.2 && <1.3,
                      blaze-html >=0.8.1 && <0.9,
                      edit-distance >=0.2 && <0.3

executable app
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -fwarn-unused-imports -O
  build-depends:      base >=4.8 && <4.9,
                      wai-extra >=3.0,
                      scotty >=0.10 && <0.11,
                      text >=1.2 && <1.3,
                      blaze-html >=0.8.1 && <0.9,
                      edit-distance >=0.2 && <0.3,
                      repetitions

test-suite test
  main-is:            Test.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  ghc-options:        -Wall -fwarn-unused-imports
  build-depends:      base >=4.8 && <4.9,
                      tasty >=0.11,
                      tasty-hunit >=0.9,
                      HUnit >=1.3,
                      repetitions
